cool.output
Nonterminals useless in grammar

   let_expression


Terminals unused in grammar

   IN
   LET
   NEW
   ISVOID
   NOT
   ERROR


Rules useless in grammar

   50 let_expression: LET OBJECTID ':' TYPEID ASSIGN expression IN expression


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' '}' ';'
    5      | CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    8 feature_list: feature
    9             | feature_list feature

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expression ';'

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expression: INT_CONST
   18           | BOOL_CONST
   19           | STR_CONST
   20           | OBJECTID
   21           | '(' expression ')'
   22           | '{' expression_block '}'
   23           | OBJECTID ASSIGN expression
   24           | expression LE expression
   25           | expression '<' expression
   26           | expression '=' expression
   27           | '-' expression
   28           | expression '*' expression
   29           | expression '/' expression
   30           | expression '+' expression
   31           | expression '-' expression
   32           | cond_expression
   33           | dispatch_expression
   34           | while_expression
   35           | case_expression

   36 expression_list: expression
   37                | expression_list ',' expression

   38 expression_block: expression
   39                 | expression_block ';' expression ';'

   40 case_expression: CASE expression OF case_branches ESAC

   41 case_branches: case_branch ';'
   42              | case_branches case_branch ';'

   43 case_branch: OBJECTID ':' TYPEID DARROW expression

   44 while_expression: WHILE expression LOOP expression POOL

   45 dispatch_expression: expression '.' OBJECTID '(' expression_list ')'
   46                    | OBJECTID '(' expression_list ')'
   47                    | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'

   48 cond_expression: IF expression THEN expression FI
   49                | IF expression THEN expression ELSE expression FI


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11 21 45 46 47
')' (41) 10 11 21 45 46 47
'*' (42) 28
'+' (43) 30
',' (44) 15 37
'-' (45) 27 31
'.' (46) 45 47
'/' (47) 29
':' (58) 10 11 12 13 16 43
';' (59) 4 5 6 7 10 11 12 13 39 41 42
'<' (60) 25
'=' (61) 26
'@' (64) 47
'{' (123) 4 5 6 7 10 11 22
'}' (125) 4 5 6 7 10 11 22
error (256)
CLASS (258) 4 5 6 7
ELSE (259) 49
FI (260) 48 49
IF (261) 48 49
IN (262)
INHERITS (263) 6 7
LET (264)
LOOP (265) 44
POOL (266) 44
THEN (267) 48 49
WHILE (268) 44
CASE (269) 40
ESAC (270) 40
OF (271) 40
DARROW (272) 43
NEW (273)
ISVOID (274)
STR_CONST (275) 19
INT_CONST (276) 17
BOOL_CONST (277) 18
TYPEID (278) 4 5 6 7 10 11 12 13 16 43 47
OBJECTID (279) 10 11 12 13 16 20 23 43 45 46 47
ASSIGN (280) 13 23
NOT (281)
LE (282) 24
ERROR (283)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
class_list (46)
    on left: 2 3, on right: 1 3
class (47)
    on left: 4 5 6 7, on right: 2 3
feature_list (48)
    on left: 8 9, on right: 5 7 9
feature (49)
    on left: 10 11 12 13, on right: 8 9
formal_list (50)
    on left: 14 15, on right: 11 15
formal (51)
    on left: 16, on right: 14 15
expression (52)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35, on right: 10 11 13 21 23 24 25 26 27 28 29 30 31 36 37 38 39
    40 43 44 45 47 48 49
expression_list (53)
    on left: 36 37, on right: 37 45 46 47
expression_block (54)
    on left: 38 39, on right: 22 39
case_expression (55)
    on left: 40, on right: 35
case_branches (56)
    on left: 41 42, on right: 40 42
case_branch (57)
    on left: 43, on right: 41 42
while_expression (58)
    on left: 44, on right: 34
dispatch_expression (59)
    on left: 45 46 47, on right: 33
cond_expression (60)
    on left: 48 49, on right: 32


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' '}' ';'
    5      | CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' '}' ';'
    5      | CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    6 class: CLASS TYPEID INHERITS . TYPEID '{' '}' ';'
    7      | CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . '}' ';'
    5      | CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 12

    feature_list  go to state 13
    feature       go to state 14


State 10

    6 class: CLASS TYPEID INHERITS TYPEID . '{' '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 18


State 13

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 19

    feature  go to state 20


State 14

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 15

    6 class: CLASS TYPEID INHERITS TYPEID '{' . '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 21

    feature_list  go to state 22
    feature       go to state 14


State 16

   10 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 23
    ')'       shift, and go to state 24

    formal_list  go to state 25
    formal       go to state 26


State 17

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 27


State 18

    4 class: CLASS TYPEID '{' '}' ';' .

    $default  reduce using rule 4 (class)


State 19

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 20

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 21

    6 class: CLASS TYPEID INHERITS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 29


State 22

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 30

    feature  go to state 20


State 23

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 24

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 32


State 25

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 26

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 27

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 28

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 29

    6 class: CLASS TYPEID INHERITS TYPEID '{' '}' ';' .

    $default  reduce using rule 6 (class)


State 30

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


State 31

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 32

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 39


State 33

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 40


State 34

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 23

    formal  go to state 41


State 35

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 52
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 36

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 37

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 38

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 39

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 57


State 40

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 58


State 41

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 42

   48 cond_expression: IF . expression THEN expression FI
   49                | IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 59
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 43

   44 while_expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 60
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 44

   40 case_expression: CASE . expression OF case_branches ESAC

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 61
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 45

   19 expression: STR_CONST .

    $default  reduce using rule 19 (expression)


State 46

   17 expression: INT_CONST .

    $default  reduce using rule 17 (expression)


State 47

   18 expression: BOOL_CONST .

    $default  reduce using rule 18 (expression)


State 48

   20 expression: OBJECTID .
   23           | OBJECTID . ASSIGN expression
   46 dispatch_expression: OBJECTID . '(' expression_list ')'

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 20 (expression)


State 49

   27 expression: '-' . expression

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 64
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 50

   21 expression: '(' . expression ')'

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 65
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 51

   22 expression: '{' . expression_block '}'

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 66
    expression_block     go to state 67
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 52

   13 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   24 expression: expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    LE   shift, and go to state 68
    '.'  shift, and go to state 69
    '@'  shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    ';'  shift, and go to state 77


State 53

   35 expression: case_expression .

    $default  reduce using rule 35 (expression)


State 54

   34 expression: while_expression .

    $default  reduce using rule 34 (expression)


State 55

   33 expression: dispatch_expression .

    $default  reduce using rule 33 (expression)


State 56

   32 expression: cond_expression .

    $default  reduce using rule 32 (expression)


State 57

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 78
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 58

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 79


State 59

   24 expression: expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   48 cond_expression: IF expression . THEN expression FI
   49                | IF expression . THEN expression ELSE expression FI

    THEN  shift, and go to state 80
    LE    shift, and go to state 68
    '.'   shift, and go to state 69
    '@'   shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76


State 60

   24 expression: expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   44 while_expression: WHILE expression . LOOP expression POOL
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    LOOP  shift, and go to state 81
    LE    shift, and go to state 68
    '.'   shift, and go to state 69
    '@'   shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76


State 61

   24 expression: expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   40 case_expression: CASE expression . OF case_branches ESAC
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    OF   shift, and go to state 82
    LE   shift, and go to state 68
    '.'  shift, and go to state 69
    '@'  shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76


State 62

   23 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 83
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 63

   46 dispatch_expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 84
    expression_list      go to state 85
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 64

   24 expression: expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   27           | '-' expression .
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    $default  reduce using rule 27 (expression)


State 65

   21 expression: '(' expression . ')'
   24           | expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    LE   shift, and go to state 68
    '.'  shift, and go to state 69
    '@'  shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    ')'  shift, and go to state 86


State 66

   24 expression: expression . LE expression
   25           | expression . '<' expression
   26           | expression . '=' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '+' expression
   31           | expression . '-' expression
   38 expression_block: expression .
   45 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   47                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    LE   shift, and go to state 68
    '.'  shift, and go to state 69
    '@'  shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76

    $default  reduce using rule 38 (expression_block)


State 67

   22 expression: '{' expression_block . '}'
   39 expression_block: expression_block . ';' expression ';'

    '}'  shift, and go to state 87
    ';'  shift, and go to state 88


State 68

   24 expression: expression LE . expression

    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    '-'         shift, and go to state 49
    '('         shift, and go to state 50
    '{'         shift, and go to state 51

    expression           go to state 89
    case_expression      go to state 53
    while_expression     go to state 54
    dispatch_expression  go to state 55
    cond_expression      go to state 56


State 69

   45 dispatch_expression: expression '.' . OBJECTID '(' expression_list ')'

    OBJECTID  shift, and go to state 90


State 70

   47 dispatch_expression: expression '@' . TYPEID '.' OBJECTID '(' expression_list ')'

    TYPEID  shift, and go to state 91


State 71

   25 expression: expression '<' . expression
